# StackRadar

./: .gitignore  README.md  build_exe.ps1  pyproject.toml  requirements-legacy.txt  requirements.txt
scripts/: probe_network.py
src/stackradar/: __main__.py  app.py
src/stackradar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stackradar/analytics/: __init__.py  synonyms.py  tech_counter.py
src/stackradar/config/: __init__.py  constants.py  settings.py
src/stackradar/llm/: __init__.py  groq_client.py  http_stream_handle.py  json_extract.py  ollama_client.py  prompts.py
src/stackradar/rag/: __init__.py  aggregate_context.py  chroma_store.py  chunking.py  embedder.py  index_meta.py  keyword_retrieve.py  retriever.py
src/stackradar/scraping/: __init__.py  eightfold_client.py  eightfold_playwright.py  normalize.py  service.py
src/stackradar/storage/: __init__.py  database.py  models.py
src/stackradar/ui/: __init__.py  chart_widget.py  chat_tab.py  dashboard_tab.py  fonts.py  main_window.py  theme.py  title_bar.py  workers.py
tests/: test_tech_counter.py
