[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stackradar"
version = "0.1.0"
description = "Desktop app: Mercado Libre (Eightfold) jobs dashboard + AI chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0,<7",
    "matplotlib>=3.8.0,<4",
    "httpx[http2]>=0.27.0,<0.29",
    "groq>=0.9.0,<1",
]

[project.optional-dependencies]
playwright = ["playwright>=1.42.0,<2"]
rag = [
    "chromadb>=0.5.13,<0.6",
    "sentence-transformers>=2.6.0,<4",
    "torch>=2.2.0,<3",
]
dev = ["pytest>=8.0.0,<9", "pyinstaller>=6.3.0,<7"]

[project.scripts]
stackradar = "stackradar.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
